# pkg/server/api/controllers/workspace/dto/dto.go
@@ -5,7 +5,7 @@ import "github.com/daytonaio/daytona/pkg/types"
 type CreateWorkspace struct {
 	Name         string
 	Target       string
-	Repositories []types.Repository
+	Repositories []types.GitRepository
 } //	@name	CreateWorkspace
 
 type WorkspaceDTO struct {
